--- a/app/global.css
+++ b/app/global.css
@@ -8,7 +8,7 @@
 :root {
   --text-strong: #0482d6;
   --sh-class: #2d5e9d;
-  --sh-identifier: #354150;
+  --sh-identifier: #3b82f6;
   --sh-sign: #8996a3;
   --sh-string: #007f7a;
   --sh-keyword: #e02518;
@@ -71,7 +71,7 @@ html {
 }
 
 .prose code {
-  @apply px-1.5 py-0.5 rounded-md bg-neutral-50 text-base border-neutral-200;
+  @apply px-1.5 py-0.5 rounded-md bg-blue-50 text-base border-neutral-200;
 }
 
 .prose pre code {
@@ -86,31 +86,31 @@ html {
 
 .prose img {
   /* Don't apply styles to next/image */
-  @apply my-6 mx-auto;
+  @apply my-6 mx-auto rounded-2xl;
 }
 
 .prose p {
-  @apply my-4 text-neutral-700 dark:text-neutral-300 text-base leading-7;
+  @apply my-4 text-neutral-600 dark:text-neutral-300 text-lg leading-8;
 }
 
 .prose h1 {
-  @apply text-2xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-3xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h2 {
-  @apply text-xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-2xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h3 {
-  @apply text-lg font-semibold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h4 {
-  @apply text-base font-semibold tracking-tight mt-6 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-lg font-bold tracking-tight mt-6 mb-3 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose strong {
-  @apply font-semibold text-neutral-900 dark:text-neutral-100;
+  @apply font-semibold text-neutral-800 dark:text-neutral-100;
 }
 
 .prose ul {
