--- a/app/global.css
+++ b/app/global.css
@@ -1,13 +1,13 @@
 @import "tailwindcss";
 
 ::selection {
-  @apply bg-yellow-100 text-neutral-950;
+  @apply bg-neutral-100 text-neutral-950;
 }
 
 :root {
   --text-strong: #0482d6;
   --sh-class: #2d5e9d;
-  --sh-identifier: #3b82f6;
+  --sh-identifier: #525252;
   --sh-sign: #8996a3;
   --sh-string: #007f7a;
   --sh-keyword: #e02518;
@@ -70,7 +70,7 @@ html {
 }
 
 .prose code {
-  @apply px-1.5 py-0.5 rounded-md bg-blue-50 text-base border-neutral-200;
+  @apply px-1.5 py-1 mx-1 rounded-md bg-neutral-100 text-base font-medium border border-neutral-200;
 }
 
 .prose pre code {
@@ -85,23 +85,23 @@ html {
 
 .prose img {
   /* Don't apply styles to next/image */
-  @apply my-6 mx-auto rounded-2xl;
+  @apply my-6 mx-auto rounded-3xl;
 }
 
 .prose p {
-  @apply my-4 text-neutral-600 dark:text-neutral-300 text-lg leading-8;
+  @apply my-4 text-neutral-600 dark:text-neutral-300 text-lg tracking-tight leading-9;
 }
 
 .prose h1 {
-  @apply text-3xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-3xl font-bold tracking-tight mt-10 mb-2 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h2 {
-  @apply text-2xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-2xl font-semibold tracking-tight mt-10 mb-2 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h3 {
-  @apply text-xl font-bold tracking-tight mt-9 mb-3 text-neutral-900 dark:text-neutral-100;
+  @apply text-xl font-semibold tracking-tight mt-10 mb-2 text-neutral-900 dark:text-neutral-100;
 }
 
 .prose h4 {
@@ -109,7 +109,7 @@ html {
 }
 
 .prose strong {
-  @apply font-semibold text-neutral-800 dark:text-neutral-100;
+  @apply font-semibold text-neutral-700 dark:text-neutral-100;
 }
 
 .prose ul {
